hphp/hack/test/typecheck/class_refinements/occurs_check.php.exp
File "occurs_check.php", line 18, characters 3-4:
Type circularity: in order to type-check this expression it is necessary for a type [rec] to be equal to type `Box<?C with { type T = [rec] }>` (Typing[4155])
